--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
   "name": "sandbox",
-  "dockerFile": "Dockerfile",
+  "dockerFile": "../Dockerfile",
+  "workspaceFolder": "../workspace",
   "remoteUser": "sandbox"
 }
