--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,8 @@
                 "christian-kohler.path-intellisense",
                 "esbenp.prettier-vscode",
                 "Gruntfuggly.todo-tree",
-                "tonybaloney.vscode-pets"
+                "tonybaloney.vscode-pets",
+                "ms-azuretools.vscode-docker"
             ]
         }
     }
